--- a/document/04-corpus.Rmd
+++ b/document/04-corpus.Rmd
@@ -12,7 +12,7 @@ In fact, many disciplinary differences in musical study more likely to result fr
 It should then come as no surprise that studies in music will often interface with diverse methodologies. 
 
 Returning to a phenomenon's invariance under different conditions, one of the most effective ways to investigate claims about the state of reality is to reproduce previously made claims using new data.
-One contributions that a researcher can make towards either bolstering or refuting claims and their resulting theories would be to generate more materials in which to examine previous claims under new conditions.
+One contribution that a researcher can make towards either bolstering or refuting claims and their resulting theories would be to generate more materials in which to examine previous claims under new conditions.
 In order to accomplish this, in this chapter I introduce a new corpus of sight-singing melodies based on the pedagogical text "A New Approach to Sight Singing" [@berkowitzNewApproachSight2011].
 The corpus contains 783 monophonic melodies that have been digitally encoded in the kern format [@huronHumdrumToolkitReference1994] and contain both melodies specifically composed for use in the Aural Skills classroom and examples of melodies from the Western canon.
 Due to the fact that the corpus contains melodic data from a sight-singing anthology first published by Sol Berkowitz, for ease of reference I will refer to this corpus as the _MeloSol_ corpus.
@@ -24,14 +24,14 @@ I end by highlighting important considerations in the underlying representations
 The use of computers to study music has been been ongoing for over the past fifty years.
 As reviewed by @hewlettComputingMusicology1991, early approaches to using music to study computers begin in the mid 1960s and due to the high effort and cost of computation, projects pursued by researchers at this time tended to focus on questions that might have global relevance.
 The use of computers to study music at this time was not by any means a sparse area of study and throughout the second half of the 20th century, research in computational musicology grew in relation to the computing abilities afforded by the available technologies [@nettheimBibliographyStatisticalApplications1997].
-During this time, not only was there progress made on computing power, many forms of developing new encoding frameworks were developed. 
+During this time, not only was there progress made on computing power, but many forms of developing new encoding frameworks were developed. 
 As discussed by @wigginsFrameworkEvaluationMusic1993, the design and development of these encoding frameworks has impact on the degree that the systems can be assessed.
-According to Wiggins and colleagues, a framework can be evaluated on the two orthogonal dimensions of expressive completeness and structural generality. 
+According to Wiggins and colleagues, a musical, digitial encoding framework can be evaluated on the two orthogonal dimensions of expressive completeness and structural generality. 
 Considering how a system is developed in order to encode encode musical information then becomes paramount given that the level of granularity of encoding data will determine the types of questions that could eventually be asked in a computational analysis.
 For example, data encoded in MIDI or CHARM format is able to store micro-time variations in performance practice, which lends itself to the ability to do performance based analyses on this data.
 If this data were instead to have been encoded in just using a frequency spectrum as would be stored in an MP3 or WAV file, this type of analysis could not be carried out as accurately due to the task of automating the detection of pitch onsets.
 
-On a higher level of abstraction, this problem of how a melody is encoded becomes exacerbated when considering meta-research issues such as the the tools-to-theories heuristic put forward by Gigerenzer [@gigerenzerToolsTheoriesHeuristic1991].
+On a higher level of abstraction, this problem of how to encode a melody becomes exacerbated when considering meta-research issues such as the the tools-to-theories heuristic put forward by Gigerenzer [@gigerenzerToolsTheoriesHeuristic1991].
 Gigerenzer claims that much of both the novelty and authority given to the trajectory of a research path is determined by the tools a group decided is valid and not the generation of new data or theories.
 Contextualizing this problem for digital music encoding, again choosing how to represent the data reflects ontological and epistemological assumptions about the data itself.
 Not only does committing to an encoding system come with the inevitable eliminating important musical features, but over time the establshing of canonical assumptions about the nature of methods might lead to researchers choosing questions and methods based on the convience of answering those questions, rather than committment to the question itself. 
@@ -39,7 +39,7 @@ This type of problem would only be exacerbated in high pressure, performance bas
 Further, the technology used to be able to query or test this data would provide an additional constraint on the analysis.
 
 Currently there is a large amount of variability in types of encoding available as well as tools that can be used for computer based analysis. 
-Popular analysis software such as music21 [@cuthbertMusic21ToolkitComputerAided2010], David Huron's Humdrum [@huronHumdrumToolkitReference1994], as well as technologies being developed by the Single Interface for Music Score Searching and Analysis (SIMSSA) project based in McGill all exist as options for the musicologist to adopt.
+Popular analysis software such as music21 [@cuthbertMusic21ToolkitComputerAided2010] and David Huron's Humdrum [@huronHumdrumToolkitReference1994] toolbox.
 Despite differences the advantages between both types of encoding and tools use to analyze this data, parsers such as the MeloSpySuite are constantly being developed to serve as digital music's Rosetta stone resulting in a current eco-system that allows for moving between encoding formats [@frielerIntroducingJazzomatProject2013]. 
 
 While many of the encoding formats throughout the past 50 years have fallen out of favor, the kern format of encoding data developed by David Huron has persisted as a choice for many computational musicologists since its initial development in 1994.
@@ -47,7 +47,7 @@ The kern format (often stylized as ```**kern```) was developed in tandem with th
 
 > a set of command-line tools that facilitates musical analysis, as well as a generalized syntax for representing sequential streams of data. Because it’s a set of command-line tools, it’s program-language agnostic. Many have employed Humdrum tools in larger scripts that use PERL, Ruby, Python, Bash, LISP, and C++.
 
-Humdrum files, unlike that of anything used in MEI are human readable and non-hierarchical, thus mirroring Western notated music's sequential time based nature.
+Humdrum files, unlike that of anything used in MEI are human readable and non-hierarchical, thus mirroring Western notated music's sequential nature.
 Because of this, editing kern files using the humdrum tool set and humdrum extras developed by Craig Sapp [@sappHumdrumExtras2008] can be done with short, UNIX scripts as opposed to similar analyses in music21. 
 Since moving between digitally encoded ecosystems is not nearly as difficult and much of encoding is can be left to the jurisdiction of the researcher, I have chose to encode this data set using the kern format. 
 
@@ -66,7 +66,7 @@ In addition to having a key signature in each kern file, I have also added an ex
 Each section of the book contains melodies that would be considered tonal, except for melodies in the fifth section of the first chapter and intermittent melodies in the fourth section of the fifth chapter which contain atonal melodies.
 If a melody is decidedly atonal or modal, this is documented in the metadata.
 Atonal melodies are given the explicit key of C major so that they can be analyzed and parsed as if they were part of a fixed do system.
-This encoding decision is reflected in the Key Distribution panel of \@ref(fig:melosoldescriptpanel).
+This encoding decision is reflected in the Key Distribution panel of \@ref(fig:melosoldescriptivepanel).
 
 ```{r melosoldescriptivepanel, echo=FALSE, fig.cap="Descriptive Statistics of MeloSol",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/melosoldescriptpanel.png")
@@ -77,7 +77,7 @@ The figure highlights general features of the corpus that might be of interest t
 In sum, the corpus represents 783 unique melodies comprising 49,730 data tokens.
 Of these 49,730 tokens, 36,641 are currently kern interpretable using the humdrum toolbox.
 The dataset also exists in a MIDI, csv, and xml format for analysis with other tool sets.
-All data was manually created.
+All data was manually encoded via MuseScore then converted and cleaned using the humdrum extras toolkit [@sappHumdrumExtras2008; @wernerMuseScore2019]. 
 
 ## Comparison of Corpora 
 
@@ -86,23 +86,23 @@ All three corpora here contain vocal melodies.
 The Berkowitz corpus was specifically designed for pedagogical purposes whereas the _Essen_ and _Densmore_ are more ecologically reflective of melodies originating from a diversity of sources.
 Given that these corpora consist of vocal melodies, there presumably would be differences on between the corpora on a large scale structure.
 I can then further investigate differences at the group level by investigating melodies of Asian origin from the _Essen_ collection and those of Native American from the _Densmore_.
-These group level differences are chosen for their geographic location and are not taken to be reflective of a cultural aggregate.
+These groupings reflect differences in geographic location and are not taken to be reflective of a cultural aggregate.
 
 Another important reason for comparing these corpora is that the _Essen_ is one of the most heavily cited corpora in the field of computational musicology and often taken as a proxy to represent the underlying expectational structure of Western music.
 Much of the research that assumes this makes claims about general level musical features such as the melodic arch [@huronMelodicArchWestern1996; @shanahanExaminingEffectOral2019] or that the implicitly learned patterns of a musical style can be represented using a corpus of digitized melodies [@demorestQuantifyingCulture2015; @pearceStatisticalLearningProbabilistic2018a].
 In this context, the underlying assumption in this inference is that a corpus-- in this case a folk song collection-- is a sample of the larger population of Western music.
-This assumption tacitly borrows the underlying logic from the Frequentist schools of thought [@dienesUnderstandingPsychologyScience2008]; the corpus is taken to be a sample of the population. 
+This assumption tacitly borrows the underlying logic from the Frequentist schools of statistical thought [@dienesUnderstandingPsychologyScience2008]; the corpus is taken to be a sample of the population. 
 This assumption is furthered when analyses are done using the null hypothesis significance testing framework. 
 
-If researchers then adopt this underlying assumption, it should then follow that in order to continually find support for these theories and hypotheses, new evidence should be put forward that uses a similar population, yet different samples.
+If researchers then adopt this underlying assumption, it should then follow that in order to continually find support for these theories and hypotheses, new evidence should be put forward that uses a similar population, yet with different samples.
 Doing so would require the creation of new samples from a parent population, very much akin to the _MeloSol_ corpus.
 Like the _Essen_, the _MeloSol_ corpus contains melodies in the Western, tonal tradition constrained by vocal performance.
-Alternatively, researchers could adopt different research epistemologies other than a general Frequentist approach, such as using Bayesian methods that do not assume a sample-population relationship, but rather take the data as the model itself.
-Regardless of what methodology is chosen, providing more evidence for previous claims depends on, as noted above, finding new evidence for claims with new data. 
+Alternatively, researchers could adopt different research epistemologies other than a general Frequentist approach, such as using Bayesian or Liklihood methods that do not assume a sample-population relationship, but rather take the data as the model itself.
+Regardless of what methodology is chosen, providing more evidence for previous claims depends on, as noted above, finding new evidence for old claims with new data. 
 
 ### Corpus Analysis
 
-In order to compare the _Essen_ collection with the _MeloSol_ corpus, I first plot general level descriptive features of all corpora in \@ref(fig:compdesc).
+In order to compare the _Essen_ collection with the _MeloSol_ corpus, I first plot general level descriptive features of all corpora in Figure \@ref(fig:compdesc).
 Creating these visualizations demonstrates size differences between the corpora.
 As noted in the bottom right panel of \@ref(fig:compdesc), then _Essen_ collection is much larger than that of the _MeloSol_ or the _Densmore_ collection. 
 
@@ -129,16 +129,16 @@ knitr::include_graphics("img/corporaemergent.png")
 The addition of the _MeloSol_ corpus also provides an opportunity to investigate and replicate other claims made in the musicological literature.
 For example, in Figure \@ref(fig:comphuron), I have reproduced the first level analysis David Huron puts forward in [@huronMelodicArchWestern1996].
 From the figure, there appears to be similar patterns between the European subset of the _Essen_ collection and that of the _MeloSol_ corpus.
-
 The most prominent phrase type in both corpora is the convex contour, followed secondly by the descending contour pattern.
 Future versions of the _MeloSol_ corpus could be used to add phrase marks and examine the extent to which Huron's claims hold in a categorically different, yet grammatically similar corpus. 
+Lastly, in \@ref(fig:krum), I plot standardized key profiles for the _Essen_ and _MeloSol_ corpora as presented in this chapter [@krumhanslCognitiveFoundationsMusical2001].
+The _Densmore_ collection is not included here as it does not come with explicit key data.
+
 
 ```{r comphuron, echo=FALSE, fig.cap="Replication of Analysis 1, Huron 1994",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/huronrecreation.png")
 ```
 
-Lastly, in \@ref(fig:krum), I plot standardized key profiles for the _Essen_ and _MeloSol_ corpora as presented in this chapter [@krumhanslCognitiveFoundationsMusical2001].
-The _Densmore_ collection is not included here as it does not come with explicit key data.
 
 ```{r krum, echo=FALSE, fig.cap="Tonal Hierarchy of Corpora",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/krumpanel.png")
@@ -158,10 +158,11 @@ Surveying how the _MeloSol_ corpus compares to that of the _Essen_ and _Densmore
 While the _MeloSol_ corpus does not exactly reflect the global level parameters of that of the European subset of the _Essen_ Collection, there appears to be evidence that some properties are the same.
 Thinking about this problem begs the question if the computational musicology community does assume a sample, population relationship between corpus and population.
 If this is true, considering how to reproduce findings in a meaningful way is important for the health of the field.
-If true, the community would be able to continue doing analyses such as that of @huronMelodicArchWestern1996, but then needs to consider such a bold claim might then replicate.
-Huron has addressed this issue [@huronVirtuousVexatiousAge2013] suggesting that the proliferation of "Big Data" will eventually lead computational musicology to an "ironic" state where statistical inference tools are no longer applicable because researchers will have access to an entire population.
+If true, the community would be able to continue doing analyses such as that of @huronMelodicArchWestern1996, but then needs to consider such a claim might then replicate.
+
+Huron had later addressed this issue [@huronVirtuousVexatiousAge2013] suggesting that the proliferation of "Big Data" will eventually lead computational musicology to an "ironic" state where statistical inference tools are no longer applicable because researchers will have access to an entire population.
 This assertion again implicitly assumes the Frequentist epistomological framework of samples and population, but Frequentism is not the only framework availible to the empirical research community [@dienesUnderstandingPsychologyScience2008].
-It is my assertion that these assumptions have still yet to be made explicit in computational analyses.
+It is my assertion that these assumptions have still yet to be made explicit in computational music analyses.
 
 For example, studies such as that by @frielerTellingStoryDramaturgy2016 fit a series of models on solos from a jazz corpus.
 The solos are taken to represent the larger population of Jazz and the authors further subdivide the Jazz into its various genre divisions such as post-bop, traditional, and cool.
