--- a/document/references.bib
+++ b/document/references.bib
@@ -27,3 +27,14 @@
   pages = {1236-1256},
   file = {/Users/davidjohnbaker/Zotero/storage/VW9596AP/Rentfrow and Gosling - 2003 - The do re mi's of everyday life The structure and.pdf},
 }
+@Misc{sappHumdrumExtras2008,
+  title = {Humdrum {{Extras}}},
+  author = {Craig Sapp},
+  year = {2008},
+}
+
+@Misc{wernerMuseScore2019,
+  title = {{{MuseScore}}},
+  author = {Schweer Werner and Froment Nicholas and Thomas Bonte},
+  year = {2019},
+}
